Supply OPEN_STATUS property for supported types